--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">Quiz</string>
+    <string name="button_feedback">Send feedback</string>
+    <string-array name="Year">
+        <item>2014</item>
+        <item>2013</item>
+        <item>2011</item>
+        <item>2010</item>
+        <item>2009</item>
+        <item>2007</item>
+        <item>2006</item>
+        <item>2005</item>
+        <item>2004</item>
+
+    </string-array>
 </resources>
